--- a/projects/MobileDashboard/force-app/main/default/translations/cs.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/cs.translation-meta.xml
@@ -10,8 +10,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label
-    >Nakonfigurujte si karty palubovky. Pro lepší výkon omezte palubovku na pět karet.</label>
+        <label>Nakonfigurujte si karty palubovky. Pro lepší výkon omezte palubovku na pět karet.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -87,8 +86,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label
-    >Po výběru objektu definujte, které záznamy budou na kartě zahrnuty.</label>
+        <label>Po výběru objektu definujte, které záznamy budou na kartě zahrnuty.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -123,10 +121,8 @@
         <label>Vlastní logika</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label
-    >Zadejte logiku podmínek. Pro každou podmínku použijte čísla. K identifikaci kombinace podmínek použijte A nebo NEBO. Přidejte závorky pro seskupení částí řetězce dohromady. Například 1 A (2 NEBO 3) vyhodnotí, zda je splněna první podmínka a zda platí druhá nebo třetí podmínka.</label>
+        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label>Zadejte logiku podmínek. Pro každou podmínku použijte čísla. K identifikaci kombinace podmínek použijte A nebo NEBO. Přidejte závorky pro seskupení částí řetězce dohromady. Například 1 A (2 NEBO 3) vyhodnotí, zda je splněna první podmínka a zda platí druhá nebo třetí podmínka.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -141,20 +137,16 @@
         <label>Vedle sebe</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label
-    >Šetří vertikální prostor. Doporučeno pro krátké názvy polí.</label>
+        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label>Šetří vertikální prostor. Doporučeno pro krátké názvy polí.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Na sobě</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label
-    >Využívá více vertikálního prostoru. Doporučeno pro dlouhé názvy polí.</label>
+        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label>Využívá více vertikálního prostoru. Doporučeno pro dlouhé názvy polí.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -390,18 +382,15 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_save_card</name>
-        <label
-    >Nepodařilo se nám uložit vaše změny. Zkuste to znovu později.</label>
+        <label>Nepodařilo se nám uložit vaše změny. Zkuste to znovu později.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_delete_card</name>
-        <label
-    >Nepodařilo se nám odstranit kartu. Zkuste to znovu později.</label>
+        <label>Nepodařilo se nám odstranit kartu. Zkuste to znovu později.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_duplicate_card</name>
-        <label
-    >Nepodařilo se nám duplikovat kartu. Zkuste to znovu později.</label>
+        <label>Nepodařilo se nám duplikovat kartu. Zkuste to znovu později.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_object_field</name>
@@ -417,8 +406,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label
-    >Zobrazení náhledu se může mírně lišit od skutečného zobrazení na mobilním zařízení.</label>
+        <label>Zobrazení náhledu se může mírně lišit od skutečného zobrazení na mobilním zařízení.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
@@ -440,4 +428,8 @@
         <name>MobileDashboard_settings_select_placeholder</name>
         <label>Vyberte...</label>
     </customLabels>
+    <customTabs>
+        <name>Mobile_Dashboard_Settings</name>
+        <label>Nastavení mobilní palubovky</label>
+    </customTabs>
 </Translations>
