--- a/projects/MobileDashboard/force-app/main/default/translations/fi.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/fi.translation-meta.xml
@@ -10,8 +10,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label
-    >Määritä mittaristosi kortit. Käytä mittaristossa enintään viisi korttia parantaaksesi suorituskykyä.</label>
+        <label>Määritä mittaristosi kortit. Käytä mittaristossa enintään viisi korttia parantaaksesi suorituskykyä.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -87,8 +86,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_field_infobubble</name>
-        <label
-    >Kun olet valinnut objektin, määritä korttiin sisällytettävät tietueet.</label>
+        <label>Kun olet valinnut objektin, määritä korttiin sisällytettävät tietueet.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_details_filter_logic_and</name>
@@ -123,10 +121,8 @@
         <label>Mukautettu logiikka</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label
-    >Anna ehtologiikka. Viittaa eri ehtoihin numeroilla. Käytä AND- tai OR-operaattoreita ehtojen yhdistelmien tunnistamiseen. Lisää sulkumerkkejä ryhmittääksesi merkkijonon osia yhteen. Esimerkiksi 1 AND (2 OR 3) tarkastaa, onko ensimmäinen ehto tosi ja onko joko toinen tai kolmas ehto tosi.</label>
+        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label>Anna ehtologiikka. Viittaa eri ehtoihin numeroilla. Käytä AND- tai OR-operaattoreita ehtojen yhdistelmien tunnistamiseen. Lisää sulkumerkkejä ryhmittääksesi merkkijonon osia yhteen. Esimerkiksi 1 AND (2 OR 3) tarkastaa, onko ensimmäinen ehto tosi ja onko joko toinen tai kolmas ehto tosi.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -141,20 +137,16 @@
         <label>Vierekkäin</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
-        <label
-    >Säästää pystysuoraa tilaa. Suositellaan lyhyille kenttien nimille.</label>
+        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <label>Säästää pystysuoraa tilaa. Suositellaan lyhyille kenttien nimille.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_layout_stack_title</name>
         <label>Pinottu</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
-        <label
-    >Säästää vaakasuoraa tilaa. Suositellaan pitkille kenttien nimille.</label>
+        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <label>Säästää vaakasuoraa tilaa. Suositellaan pitkille kenttien nimille.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_card_data_title</name>
@@ -178,8 +170,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_sub_filter_color_field_infobubble</name>
-        <label
-    >Valitse korkeakontrastiset värit parantaaksesi näkyvyyttä.</label>
+        <label>Valitse korkeakontrastiset värit parantaaksesi näkyvyyttä.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_sub_filter_options</name>
@@ -391,8 +382,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_save_card</name>
-        <label
-    >Emme voineet tallentaa muutoksiasi. Yritä myöhemmin uudelleen</label>
+        <label>Emme voineet tallentaa muutoksiasi. Yritä myöhemmin uudelleen</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_error_delete_card</name>
@@ -416,8 +406,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label
-    >Esikatselunäyttö voi erota hieman mobiililaitteen todellisesta näytöstä.</label>
+        <label>Esikatselunäyttö voi erota hieman mobiililaitteen todellisesta näytöstä.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
@@ -439,4 +428,8 @@
         <name>MobileDashboard_settings_select_placeholder</name>
         <label>Valitse...</label>
     </customLabels>
+    <customTabs>
+        <name>Mobile_Dashboard_Settings</name>
+        <label>Mobiilimittariston asetukset</label>
+    </customTabs>
 </Translations>
