--- a/projects/MobileDashboard/force-app/main/default/translations/iw.translation-meta.xml
+++ b/projects/MobileDashboard/force-app/main/default/translations/iw.translation-meta.xml
@@ -10,8 +10,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_description</name>
-        <label
-    >הגדר את כרטיסי לוח המחוונים שלך. לשיפור הביצועים, הגבל את לוחות המחוונים לחמישה כרטיסים.</label>
+        <label>הגדר את כרטיסי לוח המחוונים שלך. לשיפור הביצועים, הגבל את לוחות המחוונים לחמישה כרטיסים.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_add_card_button</name>
@@ -122,10 +121,8 @@
         <label>לוגיקה מותאמת אישית</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
-        <label
-    >ציין את לוגיקת התנאי. השתמש במספרים כדי להתייחס לכל תנאי. השתמש באופרטורים 'וגם' ו'או' כדי לזהות את שילוב התנאים. הוסף סוגריים כדי לקבץ יחדיו חלקים של המחרוזת. לדוגמה הביטוי '1 וגם (2 או 3)' מעריך אם התנאי הראשון מתקיים ('נכון') ואם התנאי השני או השלישי מתקיים.</label>
+        <name>MobileDashboard_card_modal_details_custom_logic_field_infobubble</name>
+        <label>ציין את לוגיקת התנאי. השתמש במספרים כדי להתייחס לכל תנאי. השתמש באופרטורים 'וגם' ו'או' כדי לזהות את שילוב התנאים. הוסף סוגריים כדי לקבץ יחדיו חלקים של המחרוזת. לדוגמה הביטוי '1 וגם (2 או 3)' מעריך אם התנאי הראשון מתקיים ('נכון') ואם התנאי השני או השלישי מתקיים.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_card_modal_design_tab_name</name>
@@ -140,8 +137,7 @@
         <label>צד לצד</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_side_description</name>
+        <name>MobileDashboard_card_modal_design_tab_layout_side_description</name>
         <label>לחיסכון בשטח אנכי. מומלץ עבור שמות שדות קצרים.</label>
     </customLabels>
     <customLabels>
@@ -149,8 +145,7 @@
         <label>מוערם</label>
     </customLabels>
     <customLabels>
-        <name
-    >MobileDashboard_card_modal_design_tab_layout_stack_description</name>
+        <name>MobileDashboard_card_modal_design_tab_layout_stack_description</name>
         <label>שימוש ביותר שטח אנכי. מומלץ עבור שמות שדות ארוכים.</label>
     </customLabels>
     <customLabels>
@@ -411,8 +406,7 @@
     </customLabels>
     <customLabels>
         <name>MobileDashboard_preview_title_infobubble</name>
-        <label
-    >התצוגה המקדימה עשויה להיות שונה במעט מהתצוגה במכשיר נייד בפועל.</label>
+        <label>התצוגה המקדימה עשויה להיות שונה במעט מהתצוגה במכשיר נייד בפועל.</label>
     </customLabels>
     <customLabels>
         <name>MobileDashboard_settings_duplicate_button</name>
@@ -434,4 +428,8 @@
         <name>MobileDashboard_settings_select_placeholder</name>
         <label>בחר...</label>
     </customLabels>
+    <customTabs>
+        <name>Mobile_Dashboard_Settings</name>
+        <label>הגדרות לוח מחוונים בנייד</label>
+    </customTabs>
 </Translations>
